--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ header{
     background-color: cyan;
 }
 
+.clicked-red{
+    background-color: red;
+}
+
 .btn{
     padding: 10px 50px;
     border-radius: 5px;
